includedir = $(prefix)/include/libprelude

include_HEADERS = common.h			\
		  daemonize.h			\
		  variable.h			\
		  idmef.h			\
		  idmef-additional-data.h	\
		  idmef-criteria.h		\
		  idmef-criterion-value.h	\
		  idmef-data.h			\
		  idmef-message-id.h		\
		  idmef-message-read.h		\
		  idmef-message-print.h		\
		  idmef-message-write.h		\
		  idmef-path.h			\
		  idmef-time.h			\
		  idmef-tree-data.h		\
		  idmef-tree-wrap.h		\
		  idmef-type.h			\
		  idmef-value.h			\
		  idmef-value-type.h		\
		  prelude.h			\
		  prelude-async.h		\
		  prelude-extract.h		\
		  prelude-hash.h		\
		  prelude-linked-object.h	\
		  prelude-list.h		\
		  prelude-log.h			\
		  prelude-client.h		\
		  prelude-client-profile.h	\
		  prelude-connection.h		\
		  prelude-connection-pool.h	\
		  prelude-failover.h		\
		  prelude-ident.h		\
		  prelude-inet.h		\
		  prelude-io.h			\
		  prelude-msg.h			\
		  prelude-msgbuf.h		\
		  prelude-message-id.h		\
		  prelude-option.h		\
		  prelude-option-wide.h		\
		  prelude-plugin.h		\
		  prelude-string.h		\
		  prelude-timer.h		

nodist_include_HEADERS = prelude.h prelude-inttypes.h

noinst_HEADERS = config-engine.h libmissing.h idmef-tree-data.h ntp.h tls-auth.h tls-util.h
