includedir = $(prefix)/include/libprelude

include_HEADERS = \
	prelude-error.hxx \
	idmef.hxx \
	idmef-criteria.hxx \
	idmef-path.hxx \
	idmef-time.hxx \
	idmef-value.hxx \
	prelude.hxx \
	prelude-client.hxx \
	prelude-client-easy.hxx \
	prelude-client-profile.hxx \
	prelude-connection.hxx	\
	prelude-connection-pool.hxx \
	prelude-log.hxx


-include $(top_srcdir)/git.mk
